[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Inventory/slot.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="Slot" type="Area2D"]
script = ExtResource( 1 )

[node name="Deselected" type="Sprite" parent="."]

[node name="Selected" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Item" type="Sprite" parent="."]
[connection signal="input_event" from="." to="." method="on_slot_clicked"]
[connection signal="mouse_entered" from="." to="." method="on_slot_hover_enter"]
[connection signal="mouse_exited" from="." to="." method="on_slot_hover_exit"]
